--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -26,5 +26,11 @@
     "@types/prompts": "^2.4.9",
     "typescript": "^5.2.2",
     "bun-types": "latest"
+  },
+  "publishConfig": {
+    "access": "public",
+    "dependencies": {
+      "@fatduckai/core": "^0.2.0"
+    }
   }
 }
