--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -10,7 +10,9 @@
     "build": "bun build ./src/index.ts --outdir ./dist --target node",
     "test": "bun test",
     "start": "bun run dist/index.js",
-    "dev": "bun run src/index.ts"
+    "dev": "bun run src/index.ts",
+    "prepack": "node ./scripts/prepack.js",
+    "postpack": "node ./scripts/postpack.js"
   },
   "dependencies": {
     "@fatduckai/core": "workspace:*",
