fix: gh workflow

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -30,9 +30,6 @@
     "bun-types": "latest"
   },
   "publishConfig": {
-    "access": "public",
-    "dependencies": {
-      "@fatduckai/core": "^0.2.0"
-    }
+    "access": "public"
   }
 }
