--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,9 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Build Packages
-        run: bun run build
+        run: |
+          cd packages/cli
+          node scripts/build.js
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
