--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -7,7 +7,7 @@
     "fatduckai": "./dist/index.js"
   },
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./dist --target node --shebang",
+    "build": "rm -rf dist && node scripts/build.js",
     "test": "bun test",
     "start": "bun run dist/index.js",
     "dev": "bun run src/index.ts",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fatduckai/core": "workspace:*",
+    "@octokit/rest": "^21.0.2",
     "@types/glob": "^8.1.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
