fix: release yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Build Packages
-        run: |
-          cd packages/cli
-          node scripts/build.js
+        run: bun run build
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
